--- a/exam/src/main/resources/application.properties
+++ b/exam/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-
 # suppress inspection "UnusedProperty" for whole file
-server.port=8079
-
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
-spring.datasource.url=jdbc:mysql://localhost:3306/library_database?createDatabaseIfNotExist=true
-spring.datasource.driver =com.mysql.cj.jdbc.Driver
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/supermarket_database?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.driver=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=mypass
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=TRUE
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-spring.jpa.properties.hibernate.format_sql = TRUE
-spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+
